[gd_scene load_steps=13 format=3 uid="uid://dq6tvhqcy2aps"]

[ext_resource type="Theme" uid="uid://by44nnjeu6u4n" path="res://Menus/Theme/Cogito_Theme_A.tres" id="1_74dia"]
[ext_resource type="Script" path="res://Menus/Scripts/main_menu_controller.gd" id="1_lbw7r"]
[ext_resource type="AudioStream" uid="uid://cr3bcp0u6w1pl" path="res://Menus/Theme/mouseclick1.ogg" id="3_cfl52"]
[ext_resource type="AudioStream" uid="uid://kbw2s407quul" path="res://Menus/Theme/click1.ogg" id="4_mhv4c"]
[ext_resource type="Script" path="res://Menus/Theme/AnimatedButton.gd" id="4_ufukr"]
[ext_resource type="Texture2D" uid="uid://xvn0elatew0k" path="res://Menus/Theme/Trash.png" id="6_l0dou"]
[ext_resource type="PackedScene" uid="uid://k0i6k7mcajfm" path="res://Menus/Components/SaveSlotButton.tscn" id="6_s811w"]
[ext_resource type="PackedScene" uid="uid://bly6wti1q8bsu" path="res://Menus/Scenes/OptionsTabMenu.tscn" id="8_ig87r"]
[ext_resource type="Script" path="res://Menus/Scripts/menu_scene_switcher.gd" id="9_kfsif"]
[ext_resource type="PackedScene" uid="uid://bdsnxtasgjx2o" path="res://Scenes/world.tscn" id="10_hdl4c"]
[ext_resource type="Script" path="res://Menus/Scripts/main_menu_saveslot_manager.gd" id="13_4uenq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n66hi"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("first_focus_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_74dia")
script = ExtResource("1_lbw7r")
first_focus_button = NodePath("ContentMain/GameMenu/VBoxContainer/HBoxContainerA/SaveSlot_A")
sound_hover = ExtResource("3_cfl52")
sound_click = ExtResource("4_mhv4c")

[node name="ContentMain" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 100.0
offset_top = 50.0
offset_right = 600.0
offset_bottom = 671.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="ContentMain"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "EVOKER"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ContentMain"]
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="GameMenu" type="MarginContainer" parent="ContentMain"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="ContentMain/GameMenu"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainerA" type="HBoxContainer" parent="ContentMain/GameMenu/VBoxContainer"]
layout_mode = 2

[node name="SaveSlot_A" parent="ContentMain/GameMenu/VBoxContainer/HBoxContainerA" node_paths=PackedStringArray("save_slot_manager_node") instance=ExtResource("6_s811w")]
unique_name_in_owner = true
layout_mode = 2
save_slot_manager_node = NodePath("../../../../../MainMenu_SaveSlotManager")
manual_save_slot_name = "A"

[node name="DeleteSlot_A" type="Button" parent="ContentMain/GameMenu/VBoxContainer/HBoxContainerA"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
icon = ExtResource("6_l0dou")
icon_alignment = 1
expand_icon = true
script = ExtResource("4_ufukr")

[node name="HBoxContainerB" type="HBoxContainer" parent="ContentMain/GameMenu/VBoxContainer"]
layout_mode = 2

[node name="SaveSlot_B" parent="ContentMain/GameMenu/VBoxContainer/HBoxContainerB" node_paths=PackedStringArray("save_slot_manager_node") instance=ExtResource("6_s811w")]
unique_name_in_owner = true
layout_mode = 2
save_slot_manager_node = NodePath("../../../../../MainMenu_SaveSlotManager")
manual_save_slot_name = "B"

[node name="DeleteSlot_B" type="Button" parent="ContentMain/GameMenu/VBoxContainer/HBoxContainerB"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
icon = ExtResource("6_l0dou")
icon_alignment = 1
expand_icon = true
script = ExtResource("4_ufukr")

[node name="HBoxContainer" type="HBoxContainer" parent="ContentMain/GameMenu/VBoxContainer"]
layout_mode = 2

[node name="SaveSlot_C" parent="ContentMain/GameMenu/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("save_slot_manager_node") instance=ExtResource("6_s811w")]
unique_name_in_owner = true
layout_mode = 2
save_slot_manager_node = NodePath("../../../../../MainMenu_SaveSlotManager")
manual_save_slot_name = "C"

[node name="DeleteSlot_C" type="Button" parent="ContentMain/GameMenu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
icon = ExtResource("6_l0dou")
icon_alignment = 1
expand_icon = true
script = ExtResource("4_ufukr")

[node name="Separator_PanelContainer2" type="PanelContainer" parent="ContentMain/GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_n66hi")

[node name="LegacyDemoSceneButton" type="Button" parent="ContentMain/GameMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
disabled = true
text = "Legacy Demo Scene"
script = ExtResource("4_ufukr")

[node name="OptionsButton" type="Button" parent="ContentMain/GameMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Options"
script = ExtResource("4_ufukr")

[node name="QuitButton" type="Button" parent="ContentMain/GameMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Quit"
script = ExtResource("4_ufukr")

[node name="OptionsTabMenu" parent="ContentMain" instance=ExtResource("8_ig87r")]
visible = false
layout_mode = 2

[node name="MainMenu_SaveSlotManager" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 100.0
offset_top = 603.0
offset_right = 600.0
offset_bottom = 603.0
script = ExtResource("13_4uenq")
new_game_start_scene = ExtResource("10_hdl4c")
new_game_world_dict = {
"lab_power": true
}

[node name="LegacyDemoSceneSwitcher" type="Node" parent="."]
script = ExtResource("9_kfsif")
start_game_scene = "res://addons/cogito/DemoScenes/COGITO_1_LegacyDemo.tscn"

[connection signal="pressed" from="ContentMain/GameMenu/VBoxContainer/HBoxContainerA/DeleteSlot_A" to="ContentMain/GameMenu/VBoxContainer/HBoxContainerA/SaveSlot_A" method="_on_delete_slot_pressed"]
[connection signal="pressed" from="ContentMain/GameMenu/VBoxContainer/HBoxContainerB/DeleteSlot_B" to="ContentMain/GameMenu/VBoxContainer/HBoxContainerB/SaveSlot_B" method="_on_delete_slot_pressed"]
[connection signal="pressed" from="ContentMain/GameMenu/VBoxContainer/HBoxContainer/DeleteSlot_C" to="ContentMain/GameMenu/VBoxContainer/HBoxContainer/SaveSlot_C" method="_on_delete_slot_pressed"]
[connection signal="pressed" from="ContentMain/GameMenu/VBoxContainer/LegacyDemoSceneButton" to="LegacyDemoSceneSwitcher" method="_on_main_menu_start_game_pressed"]
[connection signal="pressed" from="ContentMain/GameMenu/VBoxContainer/OptionsButton" to="." method="open_options_menu"]
[connection signal="pressed" from="ContentMain/GameMenu/VBoxContainer/QuitButton" to="." method="quit"]
